<resources>
    <string name="app_name">Be.Bank</string>
    <string name="beBank">BeBank</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="userin">Type your User</string>
    <string name="passin">Type your Password</string>
    <string name="login">Login</string>
    <string name="fPass">Forgot password?</string>
    <string name="savings">Savings Account / </string>
    <string name="money">Money:</string>
    <string name="details">Details</string>
    <string name="trans">Transactions</string>
    <string name="account">Account Number:</string>
    <string name="available">Money Available:</string>
    <string name="emptyList">This user does not have accounts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cvv">cvv</string>
    <string name="vUntil">Valid until</string>
    <string name="empty">To create a banking account go to our local building</string>
    <string name="pin">Secret PIN</string>
    <string name="unlink">Unlink</string>
    <string name="profile">My Profile</string>
    <string name="fName">Full Name</string>
    <string name="email">Email Address</string>
    <string name="ntmChange">Need to make a change?</string>
    <string name="pMessage">For your protection, some of this information can not be changed without contacting us.</string>
    <string name="ipAddress">Add the URL of the server</string>
    <string name="ipHint">192.123.12.1:8080/</string>
    <string name="setPin">Put the PIN</string>
    <string name="showLess">- Show less</string>
    <string name="showMore">+ Show more</string>
    <string name="or">OR</string>
    <string name="cPassword">Confifm password</string>
    <string name="cPin">Confirm PIN</string>
    <string name="createAccount">Create an account</string>
    <string name="createUser">Create account</string>
    <string name="jwebExpired">Your session has expired in order to access you have to do login again with your user and password</string>
    <string name="makeTr">Transfer</string>
    <string name="acctotrans">Transfer to</string>
    <string name="amounttotrans">Amount to transfer</string>
    <string name="cancel">Cancel</string>

</resources>