<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/gardient_bar"
        android:orientation="horizontal"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/goBack"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@color/transparet"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/abel"
            android:gravity="center"
            android:text="@string/createAccount"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bginputtask"
                android:hint="@string/fName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/bginputtask"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/email" />

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bginputtask"
                android:hint="@string/user"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/username"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bginputtask"
                android:inputType="textPassword"
                android:maxLength="30"
                android:hint="@string/pass"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_lock" />
            <EditText
                android:id="@+id/cPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bginputtask"
                android:inputType="textPassword"
                android:maxLength="30"
                android:hint="@string/cPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_lock" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bginputtask"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:hint="@string/pin"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/pin" />

            <EditText
                android:id="@+id/cPin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bginputtask"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:hint="@string/cPin"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/pin" />

            <ProgressBar
                android:id="@+id/progresbar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progressbar_bg"
                android:visibility="invisible" />


            <Button
                android:id="@+id/createUser"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_btnlogin"
                android:elevation="6dp"
                android:fontFamily="@font/abel"
                android:layout_marginTop="10dp"
                android:text="@string/createUser"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>