<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transfer">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/gardient_bar"
        android:orientation="horizontal"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/goBack"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@color/transparet"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/transFrom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/abel"
            android:gravity="center"
            android:text="@string/trans"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acctotrans"
            android:textColor="@color/purple"
            />

        <EditText
            android:id="@+id/accToTransfer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:background="@drawable/bginputtask"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amounttotrans"
            android:textColor="@color/purple"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/amountToTransfer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:background="@drawable/bginputtask"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"/>

        <ProgressBar
            android:id="@+id/progresbar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressbar_bg"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_purple"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Space
                android:layout_width="50dp"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/transfer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_purple"
                android:text="@string/makeTr"
                android:textAllCaps="false"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>