<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Details">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beBank"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/anton"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginEnd="5dp">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cvv"
                android:textColor="@color/white"
                android:fontFamily="@font/abel"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <Space
                android:layout_width="5dp"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="###"
                android:textColor="@color/white"
                android:fontFamily="@font/abel"
                android:textSize="20sp"
                />

        </LinearLayout>

            <TextView
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1233  3333  1212  3112"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/abel"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vUntil"
                    android:textColor="@color/white"
                    android:textSize="10sp"/>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:id="@+id/validDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="01/31"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/abel"
                    android:layout_gravity="center"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/visa"
                    />
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>